# cl-renderer

./: .gitignore  CMakeLists.txt  README.md  app.cpp  cldevice.cpp  cldevice.hpp  clplatform.cpp  clplatform.hpp  device.json  devices.json  film.cl  image.hpp  kernal.cl  mandelbox.cl  openclcommandqueue.cpp  openclcommandqueue.hpp  openclcontext.cpp  opencldevice.cpp  openclkernel.cpp  openclkernel.hpp  openclmem.cpp  openclmem.hpp  openclplatform.cpp  openclprogram.cpp  openclprogram.hpp  platform.json  pngimagewriter.cpp  program.cl  project.json  project.py  serializable.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp  vcpkg.json  vcpkgdependencies.cmake  window.cl
client/: CMakeLists.txt  app.cpp  app.hpp  deviceconfig.cpp  deviceconfig.hpp  devices.cpp  devices.hpp  platformconfig.hpp
cmake/: vcpkgdependencies.cmake
common/: CMakeLists.txt  config.hpp  deserializable.hpp  devicemessage.cpp  devicemessage.hpp  image.hpp  jsonconfig.hpp  message.hpp  messagefactory.cpp  messagefactory.hpp  opencldevice.cpp  opencldevice.hpp  openclkernel.cpp  openclmem.cpp  openclmem.hpp  projectconfig.hpp  serializable.hpp  zstdutility.hpp
docs/: message.puml  opencl.puml
server/: CMakeLists.txt  app.cpp  app.hpp
src/: app.cpp  deserializable.hpp  image.hpp  imagemap.cpp  imagemap.hpp  openclcommandqueue.cpp  openclcommandqueue.hpp  openclcontext.cpp  openclcontext.hpp  opencldevice.cpp  opencldevice.hpp  openclkernel.cpp  openclkernel.hpp  openclmem.cpp  openclmem.hpp  openclplatform.cpp  openclplatform.hpp  openclprogram.cpp  openclprogram.hpp  pngimagewriter.cpp  pngimagewriter.hpp
